unpackaged/main/default/objects/SLCA2__CA_CalendarToken__c/SLCA2__CA_CalendarToken__c.object-meta.xml
<CustomObject>
    <description>Store list of tokens for calendars</description>
    <label>CA_CalendarToken</label>
    <nameField>
        <label>CA_CalendarToken Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_CalendarTokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>