unpackaged/main/default/objects/SLCA2__CA_CalendarToken__c/fields/SLCA2__key__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__key__c</fullName>
    <description>secure key for token</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>