unpackaged/main/default/objects/SLCA2__CA_CalendarToken__c/fields/SLCA2__pwd__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__pwd__c</fullName>
    <description>Encrypted Password</description>
    <label>Pwd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>