unpackaged/main/default/objects/SLCA2__CA_CalendarToken__c/fields/SLCA2__User__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User for used for connection</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CA_CalendarTokens</relationshipName>
    <type>Lookup</type>
</CustomField>