unpackaged/main/default/objects/SLCA2__CA_CalendarToken__c/fields/SLCA2__UserLogin__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__UserLogin__c</fullName>
    <description>Name of user (better to store all data in one place and not give additional access to User table for Site profile)</description>
    <label>UserLogin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>